--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saranga B | Resume</title>
+    <script src="./bundle.js" defer></script>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <div id="root"></div>
 </body>
 </html>
